kubernetes/yamls/application/ingress-notls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: google
  namespace: google
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: susi-google.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: google
          servicePort: 80
